fix: dock and header's z-index is too high

--- a/src/assets/styles/components/dock.module.scss
+++ b/src/assets/styles/components/dock.module.scss
@@ -2,7 +2,7 @@
     top: 6vw;
     left: 1vw;
     text-align: center;
-    z-index: 9999;
+    z-index: 9;
     border: rgb(255, 255, 255) solid;
     padding: 5px;
     position: absolute;
