--- a/src/assets/styles/components/header.module.scss
+++ b/src/assets/styles/components/header.module.scss
@@ -4,7 +4,7 @@
     justify-content: space-around;
     align-items: center;
     box-sizing: border-box;
-    z-index: 9999;
+    z-index: 9;
     position: absolute;
     top: 0;
     left: 0;
